syntax = "proto3";

option go_package = "sensor";

import "internalapi/sensor/admission_control.proto";
import "google/protobuf/empty.proto";

package sensor;

message MsgFromAdmissionControl {}

message MsgToAdmissionControl {
    oneof msg {
        AdmissionControlSettings settings_push = 1;
    }
}

// A Sensor service that allows node scrapes to report results.
service AdmissionControlManagementService {
    rpc Communicate (stream MsgFromAdmissionControl) returns (stream MsgToAdmissionControl);

    rpc PolicyAlerts (AdmissionControlAlerts) returns (google.protobuf.Empty);
}
